--- a/presentation/src/main/res/values/string.xml
+++ b/presentation/src/main/res/values/string.xml
@@ -1,7 +1,79 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="stringResource">%s: %d</string>
-    <string name="CleanResource">%d회</string>
-    <string name="DemeritList">%s - %d회</string>
-    <string name="Rank">%d등</string>
+    <string name="input_number">인증번호 입력</string>
+    <string name="set_password">비밀번호 설정</string>
+    <string name="gender">성별</string>
+    <string name="major">학과</string>
+    <string name="sign_up">회원가입</string>
+    <string name="serch">지스토리에서 검색</string>
+    <string name="serchview">검색결과가 없습니다.</string>
+
+    <string name="error_number_mismatch">인증번호가 일치하지 않습니다</string>
+    <string name="error_number_not_valid">잘못된 인증번호입니다</string>
+    <string name="error_too_many_request_send_email">인증번호 요청이 5번을 초과했습니다, 5분후에 재시도해주세요</string>
+    <string name="error_verify_number">인증이 실패했습니다</string>
+    <string name="certified">인증</string>
+    <string name="resend_completion">재발송 완료</string>
+    <string name="resend_completion_description">인증번호를 재발송했어요.\n이메일을 확인해주세요!</string>
+    <string name="check">확인</string>
+
+    <string name="error_already_exists_account">이미 존재하는 계정입니다</string>
+    <string name="error_password_mismatch">비밀번호가 일치하지 않습니다</string>
+    <string name="error_password_not_valid">비밀번호 요구사항을 충족하지 않습니다</string>
+    <string name="error_sign_up">회원가입에 실패했습니다</string>
+    <string name="password">비밀번호</string>
+    <string name="check_password">비밀번호 확인</string>
+
+    <string name="error_email_not_valid">이메일 형식이 올바르지 않습니다</string>
+    <string name="error_too_many_request_verify_number">인증번호 검증 요청이 5번을 초과했습니다, 5분후에 재시도해주세요</string>
+    <string name="error_send_number">인증번호 전송이 실패했습니다</string>
+    <string name="name">이름</string>
+    <string name="email">이메일</string>
+    <string name="get_number">인증번호 받기</string>
+    <string name="select_date">날짜 선택</string>
+    <string name="initialize_filter">필터 초기화</string>
+    <string name="change_profile_image">프로필 사진 변경</string>
+    <string name="select_gallery">갤러리에서 선택</string>
+    <string name="use_default_profile">기본 프로필 사용</string>
+
+    <string name="go_back">돌아가기</string>
+    <string name="gauth_login">Sign in with GAuth</string>
+
+    <string name="first_time">처음이라면?</string>
+    <string name="forget_password">비밀번호를 잊으셨나요?</string>
+    <string name="find_password">비밀번호 찾기</string>
+
+    <string name="time_expired">시간이 만료되었습니다</string>
+    <string name="password_conditions">·&#160;&#160;&#160;대/소문자, 숫자, 특수문자 포함 6자 이상</string>
+
+    <string name="resending">재발송</string>
+
+    <string name="goms_icon_description">곰스 로고 아이콘</string>
+    <string name="goms_text_icon_description">곰스 텍스트 아이콘</string>
+    <string name="gauth_icon_description">GAuth 아이콘</string>
+    <string name="back_icon_description">뒤로가기 아이콘</string>
+    <string name="chevron_right_icon_description">오른쪽 화살표 아이콘</string>
+    <string name="chevron_down_icon_description">아래쪽 화살표 아이콘</string>
+    <string name="chevron_up_icon_description">위쪽 화살표 아이콘</string>
+    <string name="check_icon_description">체크 아이콘</string>
+    <string name="close_icon_description">취소 아이콘</string>
+    <string name="setting_icon_description">설정 아이콘</string>
+    <string name="qr_scan_icon_description">Qr 스캔 아이콘</string>
+    <string name="qr_scan_guide_icon_description">Qr 스캔 가이드 아이콘</string>
+    <string name="qr_create_icon_description">Qr 생성 아이콘</string>
+    <string name="person_icon_description">사람 아이콘</string>
+    <string name="search_icon_description">검색 아이콘</string>
+    <string name="delete_icon_description">삭제 아이콘</string>
+    <string name="write_icon_description">작성 아이콘</string>
+    <string name="fire_icon_description">불 아이콘</string>
+    <string name="coffee_icon_description">커피 아이콘</string>
+    <string name="gallery_icon_description">갤러리 아이콘</string>
+    <string name="default_image_icon_description">기본 이미지 아이콘</string>
+    <string name="outing_icon_description">외출 아이콘</string>
+    <string name="clock_icon_description">시계 아이콘</string>
+    <string name="menu_icon_description">메뉴 아이콘</string>
+    <string name="invisible_icon_description">안보이는 아이콘</string>
+    <string name="visible_icon_description">보이는 아이콘</string>
+    <string name="password_change_icon_description">비밀번호 변경 아이콘</string>
+    <string name="logout_icon_description">로그아웃 아이콘</string>
+    <string name="withdrawal_icon_description">회원탈퇴 아이콘</string>
 </resources>
